Adjust layout and add playlists to page

--- a/src/modules/Login/index.scss
+++ b/src/modules/Login/index.scss
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  min-height: 100vh;
 
   &__subtitle {
     width: 600px;
