--- a/src/modules/App/index.scss
+++ b/src/modules/App/index.scss
@@ -1,13 +1,11 @@
 @import '../../../style/abstracts/all';
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: $spotify-black-color;
-  text-align: center;
-  min-height: 100vh;
   font-size: calc(10px + 2vmin);
   color: $spotify-white-color;
+
+  &__body {
+    padding: $header-height $base-spacements-size * 4;
+  }
 }
