--- a/style/abstracts/colors.scss
+++ b/style/abstracts/colors.scss
@@ -2,3 +2,5 @@ $spotify-green-dark-color: #2ebd59;
 $spotify-green-color: #1ed760;
 $spotify-white-color: #ffffff;
 $spotify-black-color: #191414;
+
+$base-border-color: #555;
