--- a/style/abstracts/all.scss
+++ b/style/abstracts/all.scss
@@ -2,3 +2,9 @@
 @import 'spacements';
 
 $header-height: 80px + $base-spacements-size * 4;
+
+@mixin field-input() {
+  padding: $base-spacements-size;
+  border: 0;
+  border-radius: $base-spacements-size;
+}
