--- a/src/modules/Home/index.scss
+++ b/src/modules/Home/index.scss
@@ -1,6 +1,8 @@
 @import '../../../style/abstracts/all';
 
 .Home {
+  min-height: calc(100vh - #{$header-height} - #{$base-spacements-size * 4});
+
   &__section {
     &--playlists {
       margin-top: $base-spacements-size * 2;
