--- a/src/modules/Playlists/index.scss
+++ b/src/modules/Playlists/index.scss
@@ -27,5 +27,10 @@
     align-items: center;
     grid-row-gap: $base-spacements-size * 2;
     grid-column-gap: $base-spacements-size * 2;
+
+    &--empty {
+      display: block;
+      font-size: 18px;
+    }
   }
 }
