Add loading state and reload to filters and move local search to Playlists

--- a/src/modules/Filters/index.scss
+++ b/src/modules/Filters/index.scss
@@ -8,6 +8,10 @@
     border-bottom: 1px solid $base-border-color;
   }
 
+  &__loading {
+    font-size: 16px;
+  }
+
   &__fields {
     display: flex;
     flex-wrap: wrap;
