--- a/src/modules/Playlists/index.scss
+++ b/src/modules/Playlists/index.scss
@@ -9,6 +9,16 @@
     border-bottom: 1px solid $base-border-color;
   }
 
+  &__filter {
+    width: 100%;
+    margin-bottom: $base-spacements-size * 2;
+    transition: opacity 400ms;
+
+    &--empty {
+      opacity: 0.7;
+    }
+  }
+
   &__title {
     margin-top: 0;
     margin-bottom: 0;
